  - Document how to limit the attributes returned from the LDAP search
  - Add persist_in_session config option to allow storing of user and its
    roles in the session without hitting the LDAP store on each request

1.015 20 February 2015
  - Escape special characters in user/role names
  - Use the stored user credentials to look up roles
  - Split credential checking into a separate method from generic binding

1.014 26 April 2013
  - Don't fall back to unauthenticated bind when authenticating

1.013  9 January 2013
  - fix for https://rt.cpan.org/Ticket/Display.html?id=81908 security hole.

1.012  5 October 2010
  - add methods conforming to the Catalyst::Authentication::User API
    as required here:
    http://search.cpan.org/dist/Catalyst-Plugin-Authentication/lib/Catalyst/Plugin/Authentication/Internals.pod#USER_METHODS
    Nudging provided via RT https://rt.cpan.org/Ticket/Display.html?id=60793
  - add documentation for Active Directory at suggestion of Adam Wohld
  - Make ->can work for AUTOLOADED $user methods

1.011  7 July 2010
  - fix t/05-user_attributes.t to skip correct number of tests if
    Catalyst::Model::LDAP is not installed.

1.010  6 July 2010
  - Make AUTOLOAD method work for ->dn by generically calling has_attribute
    which has a special case for it.
  - Unify the handling of the ->username method between AUTOLOAD and
    has_attribute by special casing it more generically in has_attribute.
    Both RT#57610, patch and tests by Jason Fried

1.009  15 May 2010
   - Fix pod for get_user() and from_session() in Backend.pm, adding
     the missing $c param. Pass $c in from_session() through to get_user().
     Reported in https://rt.cpan.org/Ticket/Display.html?id=56983 with
     patch from Bjørn-Olav Strand.

1.008  02 April 2010
   - Allow for multiple uid values on a User object. See RT
     https://rt.cpan.org/Ticket/Display.html?id=51505
     and patch from Andrew Kirkpatrick.

1.007  19 Mar 2010